[package]
name = "llr_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
] }
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-web = "0.11.0"
dotenvy = "0.15.7"
moka = { version = "0.12.5", features = ["sync"] }
strum = "0.26"
strum_macros = "0.26"
bcrypt = "0.15"
tower-http = { version = "0.4.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.3"
