[package]
name = "llr_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
] }
prost = "0.13.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.12.1"
tonic-web = "0.12.1"
dotenvy = "0.15.7"
moka = { version = "0.12.5", features = ["sync"] }
strum = "0.26"
strum_macros = "0.26"
bcrypt = "0.15"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.205", features = ["derive"] }
jsonwebtoken = "9.3.0"

[build-dependencies]
tonic-build = "0.12.1"
protox = "0.7.0"
